--- a/inventory/templates/includes/base.html
+++ b/inventory/templates/includes/base.html
@@ -1,62 +1,88 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <link rel="stylesheet" href="{% static 'plugins/fontawesome-free/css/all.min.css' %}">
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="{% static 'plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/jqvmap/jqvmap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/overlayScrollbars/css/OverlayScrollbars.min.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/summernote/summernote-bs4.min.css' %}">
-    {% block css %}{% endblock %}
-</head>
-<body class="hold-transition sidebar-mini layout-fixed">
-    <div class="wrapper">
-        <div class="preloader flex-column justify-content-center align-items-center">
-            <img class="animation__shake" src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTELogo" height="60" width="60">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{% block title %}{% endblock %}</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+        <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" href="{% static 'plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css' %}">
+        <link rel="stylesheet" href="{% static 'plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'plugins/jqvmap/jqvmap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
+        <link rel="stylesheet" href="{% static 'plugins/overlayScrollbars/css/OverlayScrollbars.min.css' %}">
+        <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css' %}">
+        <link rel="stylesheet" href="{% static 'plugins/summernote/summernote-bs4.min.css' %}">
+
+        <link rel="stylesheet" href="{% static 'plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}">
+        <link rel="stylesheet" href="{% static 'plugins/datatables-responsive/css/responsive.bootstrap4.min.css' %}">
+        <link rel="stylesheet" href="{% static 'plugins/datatables-buttons/css/buttons.bootstrap4.min.css' %}">
+        {% block css %}{% endblock %}
+    </head>
+    <body class="hold-transition sidebar-mini layout-fixed">
+        <div class="wrapper">
+            <div class="preloader flex-column justify-content-center align-items-center">
+                <img
+                    class="animation__shake"
+                    src="{% static 'dist/img/AdminLTELogo.png' %}"
+                    alt="AdminLTELogo"
+                    height="60"
+                    width="60"
+                >
+            </div>
+            {% include './navbar.html' %}
+            {% include './sidebar.html' %}
+            <div class="content-wrapper">
+                {% block site_breadcrumbs %}{% endblock %}
+                <section class="content">
+                    <div class="container-fluid">
+                        {% block content %}{% endblock %}
+                    </div>
+                </section>
+            </div>
+            {% include './footer.html' %}
+            <aside class="control-sidebar control-sidebar-dark"></aside>
         </div>
-        {% include './navbar.html' %}
-        {% include './sidebar.html' %}
-        <div class="content-wrapper">
-            {% block site_breadcrumbs %}{% endblock %}
-            <section class="content">
-                <div class="container-fluid">
-                    {% block content %}{% endblock %}
-                </div>
-            </section>
-            <!-- Control Sidebar -->
-        </div>
-        {% include './footer.html' %}
-        <aside class="control-sidebar control-sidebar-dark">
-            <!-- Control sidebar content goes here -->
-        </aside>
-        <!-- /.control-sidebar -->
-    </div>
-    <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'plugins/jquery-ui/jquery-ui.min.js' %}"></script>
-    <script>
+        <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'plugins/jquery-ui/jquery-ui.min.js' %}"></script>
+        <script>
         $.widget.bridge('uibutton', $.ui.button)
-    </script>
-    <script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'plugins/chart.js/Chart.min.js' %}"></script>
-    <script src="{% static 'plugins/sparklines/sparkline.js' %}"></script>
-    <script src="{% static 'plugins/jqvmap/jquery.vmap.min.js' %}"></script>
-    <script src="{% static 'plugins/jqvmap/maps/jquery.vmap.usa.js' %}"></script>
-    <script src="{% static 'plugins/jquery-knob/jquery.knob.min.js' %}"></script>
-    <script src="{% static 'plugins/moment/moment.min.js' %}"></script>
-    <script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
-    <script src="{% static 'plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' %}"></script>
-    <script src="{% static 'plugins/summernote/summernote-bs4.min.js' %}"></script>
-    <script src="{% static 'plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
-    <script src="{% static 'dist/js/adminlte.js' %}"></script>
-    <script src="{% static 'dist/js/pages/dashboard.js' %}"></script>
-    {% block js %}{% endblock %}
-</body>
+        </script>
+        <script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'plugins/chart.js/Chart.min.js' %}"></script>
+        <script src="{% static 'plugins/sparklines/sparkline.js' %}"></script>
+        <script src="{% static 'plugins/jqvmap/jquery.vmap.min.js' %}"></script>
+        <script src="{% static 'plugins/jqvmap/maps/jquery.vmap.usa.js' %}"></script>
+        <script src="{% static 'plugins/jquery-knob/jquery.knob.min.js' %}"></script>
+        <script src="{% static 'plugins/moment/moment.min.js' %}"></script>
+        <script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
+        <script src="{% static 'plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' %}"></script>
+        <script src="{% static 'plugins/summernote/summernote-bs4.min.js' %}"></script>
+        <script src="{% static 'plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
+        <script src="{% static 'dist/js/adminlte.js' %}"></script>
+        <script src="{% static 'dist/js/pages/dashboard.js' %}"></script>
+        <script src="{% static 'plugins/datatables/jquery.dataTables.min.js' %}"></script>
+        <script src="{% static 'plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
+        <script src="{% static 'plugins/datatables-responsive/js/dataTables.responsive.min.js' %}"></script>
+        <script src="{% static 'plugins/datatables-responsive/js/responsive.bootstrap4.min.js' %}"></script>
+        <script src="{% static 'plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
+        <script src="{% static 'plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
+        <script src="{% static 'plugins/jszip/jszip.min.js' %}"></script>
+        <script src="{% static 'plugins/pdfmake/pdfmake.min.js' %}"></script>
+        <script src="{% static 'plugins/pdfmake/vfs_fonts.js' %}"></script>
+        <script src="{% static 'plugins/datatables-buttons/js/buttons.html5.min.js' %}"></script>
+        <script src="{% static 'plugins/datatables-buttons/js/buttons.print.min.js' %}"></script>
+        <script src="{% static 'plugins/datatables-buttons/js/buttons.colVis.min.js' %}"></script>
+        <script>
+        $(function () {
+          $("#datatable-container").DataTable({
+            "responsive": true, "lengthChange": false, "autoWidth": false,
+            "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+          }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+        });
+        </script>
+        {% block js %}{% endblock %}
+    </body>
 </html>
