add components in each pages & new page for reporting

--- a/inventory/templates/dashboard.html
+++ b/inventory/templates/dashboard.html
@@ -101,139 +101,104 @@
                     <table id="datatable-container" class="table table-bordered table-striped">
                         <thead>
                             <tr>
-                                <th>Rendering engine</th>
-                                <th>Browser</th>
-                                <th>Platform(s)</th>
-                                <th>Engine version</th>
-                                <th>CSS grade</th>
+                                <th>Equipment Name</th>
+                                <th>Category</th>
+                                <th>Model</th>
+                                <th>Serial</th>
+                                <th>Purchase Date</th>
+                                <th>Purchase Price</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Trident</td>
-                                <td>
-                                    Internet
-                        Explorer 4.0
-                                </td>
-                                <td>Win 95+</td>
-                                <td> 4</td>
-                                <td>X</td>
+                                <td>Centrifuge</td>
+                                <td>Separation Equipment</td>
+                                <td>Eppendorf 5424R</td>
+                                <td>EP5424R-2021-08</td>
+                                <td>2021-08-15</td>
+                                <td>$5,999.99</td>
                             </tr>
                             <tr>
-                                <td>Trident</td>
-                                <td>
-                                    Internet
-                        Explorer 5.0
-                                </td>
-                                <td>Win 95+</td>
-                                <td>5</td>
-                                <td>C</td>
+                                <td>Microscope</td>
+                                <td>Optical Equipment</td>
+                                <td>Nikon Eclipse Ci-L</td>
+                                <td>NE-CIL-2022-03</td>
+                                <td>2022-03-22</td>
+                                <td>$3,499.00</td>
                             </tr>
                             <tr>
-                                <td>Trident</td>
-                                <td>
-                                    Internet
-                        Explorer 5.5
-                                </td>
-                                <td>Win 95+</td>
-                                <td>5.5</td>
-                                <td>A</td>
+                                <td>PCR Thermal Cycler</td>
+                                <td>Molecular Biology</td>
+                                <td>Bio-Rad CFX96</td>
+                                <td>BR-CFX96-2020-11</td>
+                                <td>2020-11-05</td>
+                                <td>$7,850.00</td>
                             </tr>
                             <tr>
-                                <td>Trident</td>
-                                <td>
-                                    Internet
-                        Explorer 6
-                                </td>
-                                <td>Win 98+</td>
-                                <td>6</td>
-                                <td>A</td>
+                                <td>Spectrophotometer</td>
+                                <td>Analytical Equipment</td>
+                                <td>Thermo Scientific NanoDrop One</td>
+                                <td>TS-NDO-2023-01</td>
+                                <td>2023-01-10</td>
+                                <td>$9,200.00</td>
                             </tr>
                             <tr>
-                                <td>Trident</td>
-                                <td>Internet Explorer 7</td>
-                                <td>Win XP SP2+</td>
-                                <td>7</td>
-                                <td>A</td>
+                                <td>pH Meter</td>
+                                <td>Analytical Equipment</td>
+                                <td>Mettler Toledo SevenCompact</td>
+                                <td>MT-SC-2022-09</td>
+                                <td>2022-09-30</td>
+                                <td>$1,299.99</td>
                             </tr>
                             <tr>
-                                <td>Trident</td>
-                                <td>AOL browser (AOL desktop)</td>
-                                <td>Win XP</td>
-                                <td>6</td>
-                                <td>A</td>
+                                <td>Autoclave</td>
+                                <td>Sterilization Equipment</td>
+                                <td>Tuttnauer 3870EA</td>
+                                <td>TT-3870EA-2021-06</td>
+                                <td>2021-06-18</td>
+                                <td>$12,500.00</td>
                             </tr>
                             <tr>
-                                <td>Gecko</td>
-                                <td>Firefox 1.0</td>
-                                <td>Win 98+ / OSX.2+</td>
-                                <td>1.7</td>
-                                <td>A</td>
+                                <td>Incubator</td>
+                                <td>Cell Culture Equipment</td>
+                                <td>Thermo Scientific Heracell 150i</td>
+                                <td>TS-HC150I-2022-12</td>
+                                <td>2022-12-03</td>
+                                <td>$8,995.00</td>
                             </tr>
                             <tr>
-                                <td>Gecko</td>
-                                <td>Firefox 1.5</td>
-                                <td>Win 98+ / OSX.2+</td>
-                                <td>1.8</td>
-                                <td>A</td>
+                                <td>HPLC System</td>
+                                <td>Chromatography</td>
+                                <td>Agilent 1260 Infinity II</td>
+                                <td>AG-1260II-2023-02</td>
+                                <td>2023-02-14</td>
+                                <td>$45,000.00</td>
                             </tr>
                             <tr>
-                                <td>Gecko</td>
-                                <td>Firefox 2.0</td>
-                                <td>Win 98+ / OSX.2+</td>
-                                <td>1.8</td>
-                                <td>A</td>
+                                <td>Analytical Balance</td>
+                                <td>Weighing Equipment</td>
+                                <td>Sartorius Entris II BCE224i-1S</td>
+                                <td>ST-E2BCE224-2021-10</td>
+                                <td>2021-10-20</td>
+                                <td>$2,199.00</td>
                             </tr>
                             <tr>
-                                <td>Gecko</td>
-                                <td>Firefox 3.0</td>
-                                <td>Win 2k+ / OSX.3+</td>
-                                <td>1.9</td>
-                                <td>A</td>
-                            </tr>
-                            <tr>
-                                <td>Gecko</td>
-                                <td>Camino 1.0</td>
-                                <td>OSX.2+</td>
-                                <td>1.8</td>
-                                <td>A</td>
-                            </tr>
-                            <tr>
-                                <td>Gecko</td>
-                                <td>Camino 1.5</td>
-                                <td>OSX.3+</td>
-                                <td>1.8</td>
-                                <td>A</td>
-                            </tr>
-                            <tr>
-                                <td>Gecko</td>
-                                <td>Netscape 7.2</td>
-                                <td>Win 95+ / Mac OS 8.6-9.2</td>
-                                <td>1.7</td>
-                                <td>A</td>
-                            </tr>
-                            <tr>
-                                <td>Gecko</td>
-                                <td>Netscape Browser 8</td>
-                                <td>Win 98SE+</td>
-                                <td>1.7</td>
-                                <td>A</td>
-                            </tr>
-                            <tr>
-                                <td>Gecko</td>
-                                <td>Netscape Navigator 9</td>
-                                <td>Win 98+ / OSX.2+</td>
-                                <td>1.8</td>
-                                <td>A</td>
+                                <td>Rotary Evaporator</td>
+                                <td>Separation Equipment</td>
+                                <td>Buchi Rotavapor R-300</td>
+                                <td>BC-R300-2022-07</td>
+                                <td>2022-07-08</td>
+                                <td>$6,500.00</td>
                             </tr>
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>Rendering engine</th>
-                                <th>Browser</th>
-                                <th>Platform(s)</th>
-                                <th>Engine version</th>
-                                <th>CSS grade</th>
+                                <th>Equipment Name</th>
+                                <th>Category</th>
+                                <th>Model</th>
+                                <th>Serial</th>
+                                <th>Purchase Date</th>
+                                <th>Purchase Price</th>
                             </tr>
                         </tfoot>
                     </table>
