--- a/inventory/templates/chemical_report.html
+++ b/inventory/templates/chemical_report.html
@@ -4,14 +4,14 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Users</h1>
+                <h1 class="m-0">Chemical Report</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item">
                         <a href="#">Home</a>
                     </li>
-                    <li class="breadcrumb-item active">Users</li>
+                    <li class="breadcrumb-item active">Chemical Report</li>
                 </ol>
             </div>
         </div>
