--- a/inventory/templates/chemical_category.html
+++ b/inventory/templates/chemical_category.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Category</h1>
+                <h1 class="m-0">Chemical Category</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
