--- a/inventory/templates/includes/sidebar.html
+++ b/inventory/templates/includes/sidebar.html
@@ -20,7 +20,7 @@
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
-            <a href="{% url 'dashboard' %}" class="nav-link">
+            <a href="{% url 'inventory:dashboard' %}" class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Dashboard
@@ -37,13 +37,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'equipments' %}" class="nav-link">
+                <a href="{% url 'inventory:equipments' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Equipment List</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'equipment_category' %}" class="nav-link">
+                <a href="{% url 'inventory:equipment_category' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Category</p>
                 </a>
@@ -60,13 +60,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'chemicals' %}" class="nav-link">
+                <a href="{% url 'inventory:chemicals' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Chemicals List</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'chemical_category' %}" class="nav-link">
+                <a href="{% url 'inventory:chemical_category' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Category</p>
                 </a>
@@ -83,7 +83,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'users' %}" class="nav-link">
+                <a href="{% url 'inventory:users' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Users</p>
                 </a>
@@ -100,13 +100,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="{% url 'chemical_report' %}" class="nav-link">
+                <a href="{% url 'inventory:chemical_report' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Chemicals</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'equipment_report' %}" class="nav-link">
+                <a href="{% url 'inventory:equipment_report' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Equipment</p>
                 </a>
