--- a/inventory/templates/dashboard.html
+++ b/inventory/templates/dashboard.html
@@ -32,7 +32,7 @@
             <div class="icon">
                 <i class="ion ion-bag"></i>
             </div>
-            <a href="#" class="small-box-footer">
+            <a href="{% url 'inventory:equipments' %}" class="small-box-footer">
                 More info
                 <i class="fas fa-arrow-circle-right"></i>
             </a>
@@ -50,7 +50,7 @@
             <div class="icon">
                 <i class="ion ion-stats-bars"></i>
             </div>
-            <a href="#" class="small-box-footer">
+            <a href="{% url 'inventory:chemicals' %}" class="small-box-footer">
                 More info
                 <i class="fas fa-arrow-circle-right"></i>
             </a>
@@ -65,7 +65,7 @@
             <div class="icon">
                 <i class="ion ion-person-add"></i>
             </div>
-            <a href="#" class="small-box-footer">
+            <a href="{% url 'inventory:users' %}" class="small-box-footer">
                 More info
                 <i class="fas fa-arrow-circle-right"></i>
             </a>
