--- a/inventory/templates/chemical.html
+++ b/inventory/templates/chemical.html
@@ -23,10 +23,17 @@
 <div class="row">
     <section class="col-lg-12 connectedSortable">
         <div class="card">
-            <div class="card-header">
-                <h3 class="card-title font-weight-bold">
-                    Latest Equipments
-                </h3>
+            <div class="card-header d-flex justify-content-between align-items-center w-100">
+                <div>
+                    <h3 class="card-title font-weight-bold">
+                        Latest Equipments
+                    </h3>
+                </div>
+                <div class="ml-auto">
+                    <a href="{% url 'inventory:add_chemical' %}" class="btn btn-primary">
+                        Add Chemical
+                    </a>
+                </div>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
