--- a/inventory/templates/chemical_category.html
+++ b/inventory/templates/chemical_category.html
@@ -22,10 +22,15 @@
 <div class="row">
     <section class="col-lg-12 connectedSortable">
         <div class="card">
-            <div class="card-header">
+            <div class="card-header d-flex justify-content-between align-items-center">
                 <h3 class="card-title font-weight-bold">
-                    Latest Equipments
+                   Chemical Categories
                 </h3>
+                <div class="ml-auto">
+                    <a href="{% url 'inventory:add_chemical_category' %}" class="btn btn-primary">
+                        Add Chemical Category
+                    </a>
+                </div>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
