--- a/inventory/templates/chemical.html
+++ b/inventory/templates/chemical.html
@@ -57,8 +57,12 @@
                                 <td>{{ chemical.chemical_category }}</td>
                                 <td>{{ chemical.expiration_date }}</td>
                                 <td>
-                                    <button class="btn btn-primary">Edit</button>
-                                    <button class="btn btn-danger">Delete</button>
+                                    <a href="" class="text-success">
+                                        <i class="fa-solid fa-pen-to-square"></i>
+                                    </a>
+                                    <a href="" class="text-danger">
+                                        <i class="fa-regular fa-trash-can"></i>
+                                    </a>
                                 </td>
                             </tr>
                             {% endfor %}
