--- a/inventory/templates/chemical_category.html
+++ b/inventory/templates/chemical_category.html
@@ -48,8 +48,12 @@
                                 <td>{{ chemical.category_name }}</td>
                                 <td>{{ chemical.date_added }}</td>
                                 <td>
-                                    <button class="btn btn-primary">Edit</button>
-                                    <button class="btn btn-danger">Delete</button>
+                                    <a href="" class="text-success">
+                                        <i class="fa-solid fa-pen-to-square"></i>
+                                    </a>
+                                    <a href="" class="text-danger">
+                                        <i class="fa-regular fa-trash-can"></i>
+                                    </a>
                                 </td>
                             </tr>
                             {% endfor %}
