--- a/inventory/templates/equipment.html
+++ b/inventory/templates/equipment.html
@@ -52,8 +52,12 @@
                                 <td>{{ equipment.equipment_model_cost }}</td>
                                 <td>{{ equipment.equipment_category }}</td>
                                 <td>
-                                    <button class="btn btn-primary">Edit</button>
-                                    <button class="btn btn-danger">Delete</button>
+                                    <a href="" class="text-success">
+                                        <i class="fa-solid fa-pen-to-square"></i>
+                                    </a>
+                                    <a href="" class="text-danger">
+                                        <i class="fa-regular fa-trash-can"></i>
+                                    </a>
                                 </td>
                             </tr>
                             {% endfor %}
