--- a/inventory/templates/includes/sidebar.html
+++ b/inventory/templates/includes/sidebar.html
@@ -27,7 +27,7 @@
               </p>
             </a>
           </li>
-          <li class="nav-item {% if request.path == '/equipments/' or request.path == '/equipments/category' %}menu-is-opening menu-open{% endif %}">
+          <!-- <li class="nav-item {% if request.path == '/equipments/' or request.path == '/equipments/category' %}menu-is-opening menu-open{% endif %}">
             <a href="#" class="nav-link {% if request.path == '/equipments/' %}bg-primary{% endif %}">
               <i class="nav-icon fa-solid fa-toolbox"></i>
               <p>
@@ -49,7 +49,7 @@
                 </a>
               </li>
             </ul>
-          </li>
+          </li> -->
           <li class="nav-item {% if request.path == '/chemicals/' or request.path == '/chemicals/category'%}menu-is-opening menu-open{% endif %}">
             <a href="#" class="nav-link {% if request.path == '/chemicals/' or request.path == '/chemicals/category' %}bg-primary{% endif %}">
               <i class="nav-icon fa-solid fa-flask-vial"></i>
