--- a/inventory/templates/includes/base.html
+++ b/inventory/templates/includes/base.html
@@ -75,6 +75,11 @@
         <script src="{% static 'plugins/datatables-buttons/js/buttons.print.min.js' %}"></script>
         <script src="{% static 'plugins/datatables-buttons/js/buttons.colVis.min.js' %}"></script>
         <script>
+
+        function back(){
+            window.history.back();
+        }
+        
         $(function () {
           $("#datatable-container").DataTable({
             "responsive": true,
