add login and registration

--- a/inventory/templates/registration/register.html
+++ b/inventory/templates/registration/register.html
@@ -4,56 +4,38 @@
 <div class="card card-outline card-primary">
     <div class="card-header text-center">
         <a href="../../index2.html" class="h1">
-            <b>Admin</b>LTE
+            <b>Admin</b>Panel
         </a>
     </div>
     <div class="card-body">
         <p class="login-box-msg">Sign in to start your session</p>
         <form action="../../index3.html" method="post">
+            {% csrf_token %}
+            {% for input in form %}
             <div class="input-group mb-3">
-                <input type="email" class="form-control" placeholder="Email">
+                {{ input }}
+                {% if input.id_for_label == "id_username" or input.id_for_label == "id_first_name" or input.id_for_label == "id_last_name" %}
                 <div class="input-group-append">
                     <div class="input-group-text">
-                        <span class="fas fa-envelope"></span>
+                        <span class="fas fa-user"></span>
                     </div>
                 </div>
-            </div>
-            <div class="input-group mb-3">
-                <input type="password" class="form-control" placeholder="Password">
+                {% else %}
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-lock"></span>
                     </div>
                 </div>
+                {% endif %}
             </div>
+            {% endfor %}
             <div class="row">
-                <div class="col-8">
-                    <div class="icheck-primary">
-                        <input type="checkbox" id="remember">
-                        <label for="remember">
-                            Remember Me
-                        </label>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
                 </div>
             </div>
         </form>
-        <div class="social-auth-links text-center mt-2 mb-3">
-            <a href="#" class="btn btn-block btn-primary">
-                <i class="fab fa-facebook mr-2"></i>
-                Sign in using Facebook
-            </a>
-            <a href="#" class="btn btn-block btn-danger">
-                <i class="fab fa-google-plus mr-2"></i>
-                Sign in using Google+
-            </a>
-        </div>
-        <p class="mb-1">
-            <a href="forgot-password.html">I forgot my password</a>
-        </p>
-        <p class="mb-0">
+        <p class="mt-2">
             <a href="register.html" class="text-center">Register a new membership</a>
         </p>
     </div>
