--- a/inventory/templates/includes/navbar.html
+++ b/inventory/templates/includes/navbar.html
@@ -19,7 +19,7 @@
         <li class="nav-item">
             <a
                 class="nav-link"
-                href="#"
+                href="{% url 'inventory:app_logout' %}"
             >
                 <i class="fas fa-sign-out-alt"></i>
             </a>
