--- a/inventory/templates/registration/register.html
+++ b/inventory/templates/registration/register.html
@@ -3,13 +3,13 @@
 {% block auth_content %}
 <div class="card card-outline card-primary">
     <div class="card-header text-center">
-        <a href="../../index2.html" class="h1">
+        <a href="/" class="h1">
             <b>Admin</b>Panel
         </a>
     </div>
     <div class="card-body">
         <p class="login-box-msg">Sign in to start your session</p>
-        <form action="../../index3.html" method="post">
+        <form method="post">
             {% csrf_token %}
             {% for input in form %}
             <div class="input-group mb-3">
