fix the routing of the auth pages

--- a/inventory/templates/registration/register.html
+++ b/inventory/templates/registration/register.html
@@ -36,7 +36,7 @@
             </div>
         </form>
         <p class="mt-2">
-            <a href="register.html" class="text-center">Register a new membership</a>
+            Already have an account? <a href="{% url 'login' %}" class="text-center">Login</a>
         </p>
     </div>
 </div>
